Closed Bug 1311716 Opened 8 years ago Closed 8 years ago

Ensure background hang monitor is started in the GPU process

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

No description provided.
Attachment #8802943 - Flags: review?(wmccloskey) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4f7f541d40ec Ensure the hang monitor is enabled in the GPU process. (bug 1311716, r=billm)
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: