Ensure the hang monitor is enabled in the GPU process. (bug 1311716, r=billm)