xpcom/build/XPCOMInit.cpp
@@ -803,6 +803,8 @@ NS_InitMinimalXPCOM()
 
   AbstractThread::InitStatics();
   SharedThreadPool::InitStatics();
+  mozilla::HangMonitor::Startup();
+  mozilla::BackgroundHangMonitor::Startup();
 
   return NS_OK;
 }
